完善博客管理页面集成markdown插件

--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,12 @@
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
+
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+
     </properties>
 
     <dependencies>
@@ -78,6 +80,11 @@
         </dependency>
         <!-- jquery -->
 
+        <dependency>
+            <groupId>org.webjars.bowergithub.pandao</groupId>
+            <artifactId>editor.md</artifactId>
+            <version>1.5.0</version>
+        </dependency>
 
     </dependencies>
 
