--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 <!--            <artifactId>tocbot</artifactId>-->
 <!--            <version>4.11.2</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.webjars.bowergithub.sofish</groupId>
+            <artifactId>typo.css</artifactId>
+            <version>2.1.2</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
