--- a/pom.xml
+++ b/pom.xml
@@ -68,18 +68,38 @@
         </dependency>
 
 <!--        自动生成目录-->
-<!--        <dependency>-->
-<!--            <groupId>org.webjars.bowergithub.tscanlin</groupId>-->
-<!--            <artifactId>tocbot</artifactId>-->
-<!--            <version>4.11.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.webjars.bowergithub.tscanlin</groupId>
+            <artifactId>tocbot</artifactId>
+            <version>4.11.2</version>
+        </dependency>
 <!--        mvn install:install-file -Dfile=D:\workspace\idea\PrivateBlog\src\main\resources\lib\typo.css-2.1.2.jar -DgroupId=org.webjars.bowergithub.sofish -DartifactId=typo.css -Dversion=2.1.2 -Dpackaging=jar-->
         <dependency>
             <groupId>org.webjars.bowergithub.sofish</groupId>
             <artifactId>typo.css</artifactId>
             <version>2.1.2</version>
         </dependency>
-<!--        <dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/waypoints -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>waypoints</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars/jquery.scrollTo -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery.scrollTo</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/qrcode -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>qrcode</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
 <!--        </dependency>-->
