--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
             <artifactId>tocbot</artifactId>
             <version>4.11.2</version>
         </dependency>
-<!--        mvn install:install-file -Dfile=D:\workspace\idea\PrivateBlog\src\main\resources\lib\typo.css-2.1.2.jar -DgroupId=org.webjars.bowergithub.sofish -DartifactId=typo.css -Dversion=2.1.2 -Dpackaging=jar-->
+<!--        mvn install:install-file -Dfile=D:\workspace\idea\PrivateBlog\src\main\resources\lib\waypoints-4.0.1.jar -DgroupId=org.webjars.bowergithub.imakewebthings -DartifactId=waypoints -Dversion=4.0.1 -Dpackaging=jar-->
         <dependency>
             <groupId>org.webjars.bowergithub.sofish</groupId>
             <artifactId>typo.css</artifactId>
@@ -82,24 +82,38 @@
 
         <!-- https://mvnrepository.com/artifact/org.webjars.bower/waypoints -->
         <dependency>
-            <groupId>org.webjars.bower</groupId>
+            <groupId>org.webjars.bowergithub.imakewebthings</groupId>
             <artifactId>waypoints</artifactId>
             <version>4.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.webjars.bower</groupId>-->
+<!--            <artifactId>jquery-waypoints</artifactId>-->
+<!--            <version>4.0.1</version>-->
+<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.webjars/jquery.scrollTo -->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery.scrollTo</artifactId>
             <version>2.1.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.webjars.bower/qrcode -->
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>qrcode</artifactId>
-            <version>1.0.2</version>
-        </dependency>
 
-        <!--        <dependency>-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>qrcodejs</artifactId>
+            <version>1c78ccd</version>
+        </dependency>
+<!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
 <!--        </dependency>-->
@@ -107,12 +121,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.mybatis.spring.boot</groupId>-->
-<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
-<!--            <version>2.1.3</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.3</version>
+        </dependency>
 
+        <!--面向切面 Aspect-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>mysql</groupId>-->
 <!--            <artifactId>mysql-connector-java</artifactId>-->
