--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-# \u5B9A\u4F4D\u6A21\u677F\u7684\u76EE\u5F55
-spring.mvc.view.prefix=classpath:/templates/
-# \u7ED9\u8FD4\u56DE\u7684\u9875\u9762\u6DFB\u52A0\u540E\u7F00\u540D
-spring.mvc.view.suffix=.html
 
-spring.thymeleaf.cash=false
+#spring.mvc.view.prefix=classpath:/templates/
+#spring.mvc.view.suffix=.html
 
-spring.resources.static-locations=classpath:/static
-server.port=80
+#spring.thymeleaf.cash=false
+#
+#spring.resources.static-locations=classpath:/static
+#server.port=80
