--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 spring:
   mvc:
     view:
-      prefix: classpath:/templates/
+      prefix: classpath:/templates
       suffix: .html
 
   thymeleaf:
