--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -13,12 +13,13 @@ spring:
     static-locations: classpath:/static
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3308/blog?useUnicode=true&&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
     username: root
-    password: root
+    password: 123456
 
 mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
+  type-aliases-package: com.aioe.test.demo.pojo
 #  type-aliases-package:
 
 logging:
