--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,19 @@ spring:
     view:
       prefix: classpath:/templates
       suffix: .html
-
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        max-active: 20
+        max-wait: -1
+        max-idle: 10
+        min-idle: 0
+    lettuce:
+      shutdown-timeout: 1000
   thymeleaf:
     cash=false: false
   resources:
